6/20/14: the Parser's gotten a bit better. Ignore the note I added, its wrong.