@@ -6,8 +6,8 @@
 
 package LanguageBase.Parsers;
 
+import Internal.BaseTest;
 import LanguageBase.Parsers.Parser.ParseNode;
-import java.util.LinkedList;
 import org.junit.After;
 import static org.junit.Assert.*;
 import org.junit.Before;
@@ -17,17 +17,19 @@ import org.junit.Test;
  *
  * @author arthur
  */
-public class ParserTest {
+public class ParserTest extends BaseTest{
     private Parser parser;
     
     public ParserTest() {
     }
     
     @Before
+    @Override
     public void setUp() {
     }
     
     @After
+    @Override
     public void tearDown() {
         parser = null;
     }
@@ -39,51 +41,107 @@ public class ParserTest {
         assertEquals("", parser.source);
     }
     
-    private void verifySimpleParserWithSimpleStatements(String source){
+    private void verifyParserWithSimpleStatements(String source, String decl, String stmt){
         assertEquals(1, parser.getNodes().size());
         ParseNode node = parser.getNodes().getFirst();
+        this.compareStrings(decl, node.getSource());
         assertEquals(1, node.getNodes().size());
         assertEquals(0, node.start);
+        
+        node = node.getNodes().getFirst();
         assertEquals(source.length()-1, node.end);
+        this.compareStrings(stmt, node.getSource());
     }
 
     @Test
     public void testParseSimpleStatements() {
         String source = "if(someBoolean()){someMethod();}";
         parser = new Parser(source);
-        this.verifySimpleParserWithSimpleStatements(source);
+        this.verifyParserWithSimpleStatements(
+                source, 
+                "if(someBoolean())", 
+                "{someMethod();}");
         
         source = "if(someBoolean())someMethod();";
         parser = new Parser(source);
-        this.verifySimpleParserWithSimpleStatements(source);
+        this.verifyParserWithSimpleStatements(
+                source, 
+                "if(someBoolean())", 
+                "someMethod();");
         
         source = "while(someBoolean()){someMethod();}";
         parser = new Parser(source);
-        this.verifySimpleParserWithSimpleStatements(source);
+        this.verifyParserWithSimpleStatements(
+                source, 
+                "while(someBoolean())", 
+                "{someMethod();}");
         
         source = "while(someBoolean())someMethod();";
         parser = new Parser(source);
-        this.verifySimpleParserWithSimpleStatements(source);
+        this.verifyParserWithSimpleStatements(
+                source, 
+                "while(someBoolean())", 
+                "someMethod();");
         
         source = "for(some;setOf;things){someMethod();}";
         parser = new Parser(source);
-        this.verifySimpleParserWithSimpleStatements(source);
+        this.verifyParserWithSimpleStatements(
+                source, 
+                "for(some;setOf;things)", 
+                "{someMethod();}");
         
         source = "for(some;setOf;things)someMethod();";
         parser = new Parser(source);
-        this.verifySimpleParserWithSimpleStatements(source);
+        this.verifyParserWithSimpleStatements(
+                source, 
+                "for(some;setOf;things)", 
+                "someMethod();");
     }
     
     @Test
     public void testParseDoLoop(){
         String source = "do{someStatement();}while(someBoolean());";
         parser = new Parser(source);
-        assertEquals(1, parser.getNodes().size());
-        ParseNode node = parser.getNodes().getFirst();
-        assertEquals(1, node.getNodes().size());
+        assertEquals(2, parser.getNodes().size());
+        
+        ParseNode node = parser.getNodes().get(0);
         assertEquals(0, node.start);
+        assertEquals(2, node.end);
+        assertEquals(1, node.getNodes().size());
+        assertEquals("do{", node.getSource());
+        
+        node = node.getNodes().get(0);
+        assertEquals(3, node.start);
+        assertEquals(18, node.end);
+        assertEquals("someStatement();", node.getSource());
+        
+        node = parser.getNodes().get(1);
+        assertEquals(19, node.start);
         assertEquals(source.length()-1, node.end);
-        fail();
+        this.compareStrings("}while(someBoolean());", node.getSource());
+    }
+    
+    @Test
+    public void testParseDoLoopWithoutBracktes(){
+        String source = "do someStatement(); while(someBoolean());";
+        parser = new Parser(source);
+        assertEquals(2, parser.getNodes().size());
+        
+        ParseNode node = parser.getNodes().get(0);
+        assertEquals(0, node.start);
+        assertEquals(2, node.end);
+        assertEquals(1, node.getNodes().size());
+        assertEquals("do ", node.getSource());
+        
+        node = node.getNodes().get(0);
+        assertEquals(3, node.start);
+        assertEquals(18, node.end);
+        assertEquals("someStatement();", node.getSource());
+        
+        node = parser.getNodes().get(1);
+        assertEquals(20, node.start);
+        assertEquals(source.length()-1, node.end);
+        this.compareStrings("while(someBoolean());", node.getSource());
     }
     
     @Test
@@ -98,6 +156,22 @@ public class ParserTest {
         fail();
     }
     
+    @Test
+    public void testParseIgnoresComments(){
+        String source = "if(someBoolean()){//commentedOutCode();\nsomeMethod();}";
+        parser = new Parser(source);
+        assertEquals(1, parser.getNodes().size());
+        ParseNode node = parser.getNodes().getFirst();
+        assertEquals(1, node.getNodes().size());
+        assertEquals(0, node.start);
+        assertEquals(source.length()-1, node.end);
+        
+        node = node.getNodes().getFirst();
+        assertEquals(51, node.start);
+        assertEquals(source.length()-1, node.end);
+    }
+    
     //testIgnoresComment, testIngoresStringLiteral, testIgnoresArrayDeclaration, etc...
+    //testParseIfElse
     
 }
